@@ -2,7 +2,6 @@ GADTRecord.hs		GADT records not yet supported.
 DoRec.hs		DoRec not yet supported.
 CStyleLinePragmas.hs	Shouldn't succeed. HSE does not and will not support C-style line pragmas.
 QuasiQuoteSplice.hs	Splicing inside quasi-quotes fails
-DoubleHashOp.hs		Bug with UnboxedTuples
 ExtraEndBrace.hs	Should fail - but gracefully
 ArityMismatch.hs	Should fail - but give error message in the right place
 ForallInInstance.hs	Bug - needs AST change
